src/app.css
/*
Write your global styles here, in PostCSS syntax
*/

@tailwind base;
@tailwind components;
@tailwind utilities;

/*
@import '@fontsource/fira-mono';
*/

:root {
	font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
	--font-mono: 'Fira Mono', monospace;
	--pure-white: #ffffff;
	--primary-color: #b9c6d2;
	--secondary-color: #d0dde9;
	--tertiary-color: #edf0f8;
	--accent-color: #ff3e00;
	--heading-color: rgba(0, 0, 0, 0.7);
	--text-color: #444444;
	--background-without-opacity: rgba(255, 255, 255, 0.7);
	--column-width: 42rem;
	--column-margin-top: 4rem;
}

body {
	min-height: 100vh;
	font-family: 'Catamaran';
	font-size: calc(14px + 0.25vw);
	margin: 0;
	background: linear-gradient(180deg, var(--pure-white) 0%, #faf0dd 45%, #f7e6c6 100%);
}

body::before {
	content: '';
	width: 80vw;
	height: 100vh;
	position: absolute;
	top: 0;
	left: 10vw;
	z-index: -1;
	background: radial-gradient(
		50% 50% at 50% 50%,
		var(--pure-white) 0%,
		rgba(255, 255, 255, 0) 100%
	);
	opacity: 0.05;
}

h1,
h2,
p {
	font-weight: 400;
	color: var(--heading-color);
}

p {
	line-height: 1.5;
}

pre {
	font-size: 16px;
	font-family: var(--font-mono);
	background-color: rgba(255, 255, 255, 0.45);
	border-radius: 3px;
	box-shadow: 2px 2px 6px rgb(255 255 255 / 25%);
	padding: 0.5em;
	overflow-x: auto;
	color: var(--text-color);
}

input,
button {
	font-size: inherit;
	font-family: inherit;
}

button:focus:not(:focus-visible) {
	outline: none;
}

